# demos

./: README.md
devrel/: .dockerignore  .env.example  Dockerfile  README.md  config.yaml  pyproject.toml
devrel/skills/hackernews/: SKILL.md
devrel/skills/hackernews/references/: api_reference.md
devrel/skills/hackernews/scripts/: hn_search.py
devrel/skills/reddit-research/: SKILL.md
devrel/skills/reddit-research/references/: api_reference.md
devrel/skills/reddit-research/scripts/: reddit_search.py
devrel/skills/slack-tools/: SKILL.md
devrel/skills/slack-tools/references/: api_reference.md
devrel/skills/slack-tools/scripts/: slack_tools.py
devrel/skills/x-research/: SKILL.md
devrel/skills/x-research/references/: api_reference.md
devrel/skills/x-research/scripts/: x_search.py
devrel/skills/youtube-research/: SKILL.md
devrel/skills/youtube-research/references/: youtube_api.md
devrel/skills/youtube-research/scripts/: youtube_search.py
devrel/src/: agent.py
